<resources>
    <string name="app_name">FoodSasa</string>
    <string name="logoText">FoodSasa</string>
    <string name="get_started">Get Started</string>
    <string name="reg_text">Sign up to start your new journey</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="go">GO</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?LOGIN</string>
    <string name="login_in_to_continue">Login in to continue</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">DON\'T HAVE AN ACCOUNT?REGISTER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description_food">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
</resources>