<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!--top bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/header_bg"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:src="@drawable/ben"
            />
        <!--top bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/header_bg"
            android:padding="12dp"
            android:layout_marginBottom="0dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/homeButton"
                android:layout_width="387dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/actor"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/orange"
                android:textSize="22sp"/>

        </LinearLayout>
    </LinearLayout>
    <!--Creating the menu grid button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sloganName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/actor"
            android:text="@string/enter_your_email_address"
            android:layout_marginTop="10dp"
            android:textSize="18dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_gravity="left"
            android:elevation="0dp"
            android:textColor="@color/orange"/>


        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_orange_borderadius"
            android:textColor="@color/white"
            android:text="@string/reset" />


    </LinearLayout>

    </LinearLayout>
</ScrollView>