<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--top bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/header_bg"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:src="@drawable/ben"
                />
            <!--top bar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/header_bg"
                android:padding="12dp"
                android:layout_marginBottom="0dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lobster"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="35dp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/homeButton"
                    android:layout_width="387dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:fontFamily="@font/actor"
                    android:background="@color/white"
                    android:text="Add Today's Menu"
                    android:textColor="@color/orange"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>
        <!--Creating the menu grid button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <Button
            android:id="@+id/datepickerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date"/>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/selectedDate"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/menuitembtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Food Itens"/>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Food Item List"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fooditemslist"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:hint="@string/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>


            <Button
                android:id="@+id/toRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_orange_borderadius"
                android:text="@string/save"
                android:textColor="#fff" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>